--- a/Supplementary Materials/Processes/Templates/3.25.24 materials.md
+++ b/Supplementary Materials/Processes/Templates/3.25.24 materials.md
@@ -51,10 +51,13 @@
     "Type": "FacilitatorDAO Action Tenet",
     "Components": {
         "Tenet": "",
+	"See Also": {
+		"Doc Identifier #": "string"
+	}
         "Status":"Approved or Provisional",
         "Needed Research":[
-          "string",
-					"string" 
+          	"string",
+		"string" 
         ]
         },
     "Last_Modified": "2024-XX-XX-00:00:00",
