--- a/Supplementary Materials/Processes/Templates/3.25.24 materials.md
+++ b/Supplementary Materials/Processes/Templates/3.25.24 materials.md
@@ -100,7 +100,7 @@
             }
         }
         },
-        "Last_Modified": "2023-11-09-00:00:00",
+        "Last_Modified": "20XX-XX-XX-00:00:00",
         "Child_Documents": [],
         "links_to": {},
         "linked_from": []
