--- a/Supplementary Materials/Processes/Templates/3.25.24 materials.md
+++ b/Supplementary Materials/Processes/Templates/3.25.24 materials.md
@@ -10,15 +10,38 @@
     "Components": {
         "Content": ""
     },
-    "Last_Modified": "2024-XX-XX-00:00:00",
+    "Last_Modified": "20XX-XX-XX-00:00:00",
     "Child_Documents": [],
     "links_to": {},
     "linked_from": []
 ```
 
+
+
+## Element Annotation Directory
+
+```json
+"A.1.X.mX-X.0.3": {
+    "Name": "Element Annotations Directory",
+    "Version": X,
+    "Type": "Element Annotations Directory",
+    "Components": {
+        "Directory index": {
+          "": "",
+          "": ""
+        }
+    },
+    "Last_Modified": "20XX-XX-XX-00:00:00",
+    "Child_Documents": [],
+    "links_to": {},
+    "linked_from": []
+```
+
+
+
 ## Element Annotation
 
-- Remember to include the Element Annotation Directory Document
+- Remember to include the Element Annotation Directory Document 
 
 ```json
 "A.1.X.mX-X.0.3.X": {
@@ -34,11 +57,34 @@
 					"string" 
         ]
     },
-    "Last_Modified": "2024-XX-XX-00:00:00",
+    "Last_Modified": "20XX-XX-XX-00:00:00",
     "Child_Documents": [],
     "links_to": {},
     "linked_from": []
 ```
+
+
+
+## Action Tenet Directory Document
+
+```json
+"A.1.X.mX-X.0.4": {
+    "Name": "Action Tenets Directory",
+    "Version": X,
+    "Type": "Action Tenets Directory",
+    "Components": {
+        "Directory index": {
+          "": "",
+          "": ""
+        }
+    },
+    "Last_Modified": "20XX-XX-XX-00:00:00",
+    "Child_Documents": [],
+    "links_to": {},
+    "linked_from": []
+```
+
+
 
 ## Action Tenet
 
@@ -51,20 +97,43 @@
     "Type": "FacilitatorDAO Action Tenet",
     "Components": {
         "Tenet": "",
-	"See Also": {
-		"Doc Identifier #": "string"
-	}
+				"See Also": {
+						"Doc Identifier #": "string"
+				}
         "Status":"Approved or Provisional",
         "Needed Research":[
           	"string",
-		"string" 
+						"string" 
         ]
         },
-    "Last_Modified": "2024-XX-XX-00:00:00",
+    "Last_Modified": "20XX-XX-XX-00:00:00",
     "Child_Documents": [],
     "links_to": {},
     "linked_from": []
 ```
+
+
+
+## Scenario Directory
+
+```json
+"A.1.X.mX-X.0.4.X.1": {
+    "Name": "Scenarios Directory",
+    "Version": X,
+    "Type": "Scenarios Directory",
+    "Components": {
+        "Directory index": {
+          "": "",
+          "": ""
+        }
+    },
+    "Last_Modified": "20XX-XX-XX-00:00:00",
+    "Child_Documents": [],
+    "links_to": {},
+    "linked_from": []
+```
+
+
 
 ## Scenario
 
